# indian-stock-signals

./: .gitignore  404.html  LICENSE  Makefile  README.md  docker-compose.yml  index.html  predictions.json
.github/workflows/: ci.yml  refresh.yml
_bmad/: config.user.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
assets/: index-BS4ox4tM.js  index-Bb0r4oFt.css  index-CspdtdYG.css  index-DO21zcWA.js
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  models.py
backend/app/data/: predictions.json
backend/tests/: test_api.py
docs/: 01-product-research.md  02-prd.md  03-tech-spec.md  model-evaluation.json
frontend/: .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/scripts/: copy-predictions.mjs
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: ChartLinks.jsx  Disclaimer.jsx  MetaBar.jsx  ScoreBadge.jsx  SectorCard.jsx  StockRow.jsx
frontend/src/test/: SectorCard.test.jsx
ml/: README.md  pyproject.toml
ml/data/: sectors.csv  universe.csv
ml/src/iss/: __init__.py  config.py  data.py  evaluate.py  features.py  model.py  pipeline.py  rationale.py  scoring.py  sectors.py  universe.py
ml/tests/: conftest.py  test_evaluate.py  test_features.py  test_pipeline.py  test_scoring.py
